--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="instagram-wrapper">
       <div class="instagram-phone">
-        <img src="./img/phone.png" alt="celular" />
+        <img src="./img/Iphone SE gold.png" alt="celular" />
       </div>
       <div class="instragram-continue">
         <div class="group">
